--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+    }
+}
+
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'com.jfrog.bintray'
 
 sourceCompatibility = 1.7
 group = 'com.layer'
@@ -30,51 +40,21 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
-signing {
-    sign configurations.archives
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'Gradle Git Repo Plugin'
-                packaging 'jar'
-                // optionally artifactId can be defined here
-                description 'Use a git repo as a maven-style repo'
-                url 'https://github.com/layerhq/gradle-git-repo-plugin'
-
-                scm {
-                    connection 'scm:git:git@github.com:layerhq/gradle-git-repo-plugin.git'
-                    developerConnection 'scm:git:git@github.com:layerhq/gradle-git-repo-plugin.git'
-                    url 'https://github.com/layerhq/gradle-git-repo-plugin'
-                }
-
-                licenses {
-                    license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'drapp'
-                        name 'Douglas Rapp'
-                        email 'doug@layer.com'
-                    }
-                }
-            }
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_API_KEY')
+    configurations = ['archives']
+    pkg {
+        repo = 'com.gc.tools'
+        name = 'gradle-git-repo-plugin'
+        userOrg = 'gamechanger'
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/gamechanger/gradle-git-repo-plugin'
+        publish = true
+        version {
+            name = '2.0.2'
+            desc = 'Use a git repo as a maven-style repo'
+            released = new Date()
         }
     }
 }
